fix table wrap

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 h1 {
-  margin-top: 2cm;
-  margin-bottom: 2cm;
+  margin-top: 1cm;
+  margin-bottom: 1cm;
 }
 
 h2 {
@@ -34,6 +34,7 @@ td:last-child {
 
 th {
   text-align: left;
+  white-space: nowrap;
 }
 
 .name {
